--- a/10.introduccionCSS/css/style-box-model_2.css
+++ b/10.introduccionCSS/css/style-box-model_2.css
@@ -19,6 +19,14 @@ h1{
         -Relleno de 20px
         -Margen inferior de 100px    
 */
+#p1 {
+    color: red;
+    font-weight: bold;
+    border: 3px solid blue;
+    width: 500px;
+    padding: 20px;
+    margin-bottom: 100px;
+}
 
 /* 
     Para el párrafo 2 aplicamos:
@@ -30,6 +38,16 @@ h1{
         -Relleno de 20px a los lados y de 50px arriba y abajo
         -Margen inferior de 20px  
 */
+#p2 {
+    color: blue;
+    font-style: italic;
+    text-align: right;
+    border: dotted 5px red;
+    width: 600px;
+    margin: auto;
+    padding: 50px 20px 50px 20px;
+    margin-bottom: 20px;
+}
 
 /* 
     Para el párrafo 3 aplicamos:
@@ -39,6 +57,14 @@ h1{
         -Sin relleno
         -Margen superior e inferior de 50px  
 */
+#p3 {
+    text-align: justify;
+    line-height: 30px;
+    border: outset 8px black;
+    width: 50%;
+    padding: none;
+    margin: 50px 0 50px 0;
+}
 
 /* 
     Para el párrafo 4 aplicamos:
@@ -47,3 +73,10 @@ h1{
         -Ancho del 100%
         -Relleno superior de 10px
 */
+#p4 {
+    font-style: italic;
+    font-size: 10px;
+    border-top: solid 2px red;
+    width: 100%;
+    padding-top: 10px;
+}
