--- a/10.introduccionCSS/Fondos/style-fondos.css
+++ b/10.introduccionCSS/Fondos/style-fondos.css
@@ -1,19 +1,33 @@
-h1 {
-    background-image: url(soap-bubbles-9585870_640.jpg);
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+header {
+    background-image: url("soap-bubbles-9585870_640.jpg");
     background-size: 1000px 200px;
     background-attachment: fixed;
+    padding: 50px;
+    text-align: center;
+    color: white;
 }
 
 .secc1 {
     background: linear-gradient(90deg, rgba(178, 116, 219, 1) 0%, rgba(160, 51, 144, 1) 29%, rgba(126, 29, 253, 1) 61%, rgba(252, 176, 69, 1) 100%);
     background-size: 1000px 200px;
     background-attachment: fixed;
+    padding: 100px;
+
 }
 
 .secc2 {
-    background-image: url(blob-scatter-haikei.png);
-    background-size: 1000px 200px;
+    background-image: url("blob-scatter-haikei.png");
+    background-size: cover;
     background-attachment: fixed;
+    padding: 100px;
 }
 
 .secc3 {
@@ -30,6 +44,7 @@ h1 {
     background-size: var(--s) var(--s);
     background-size: 1000px 200px;
     background-attachment: fixed;
+    padding: 100px;
 }
 
 .footer {
@@ -50,4 +65,5 @@ h1 {
     background-size: calc(2*(var(--s) + var(--g))) calc(2*(var(--s) + var(--g)));
     background-size: 100px 100px;
     background-attachment: fixed;
+    padding: 100px;
 }
