--- a/12.EventoCultural/css/style.css
+++ b/12.EventoCultural/css/style.css
@@ -108,13 +108,20 @@ hr {
 
 .activi {
     display: flex;
-    padding: 80px;
+    flex-direction: column;
+    padding: 50px;
     margin: 20px;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    gap: 50px;
 }
 
-#p1, #p2, #p3 {
+.parra {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.parra p {
     background: linear-gradient(90deg,rgba(41, 66, 38, 0.98) 27%, rgba(31, 43, 71, 1) 60%, rgba(133, 95, 68, 1) 100%);
     border: var(--Fondo-botones) solid 5px;
     border-radius: 100%;
@@ -127,8 +134,10 @@ hr {
     width: 200px;
     height: 200px;
     display: flex;
+    justify-content: center;
     align-items: center;
 }
+
 
 #feria {
     background: var(--Fondo-encabe);
@@ -160,19 +169,19 @@ hr {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    padding: 30px;
-    
+    padding: 150px;
+    gap: 30px;
 }
 
 .fecha,
 .localizacion,
 .acceso {
-    margin: 50px 0;
     display: flex;
     flex-direction: column;
+    width: 30%;
 }
 
-.sec2 h2, .org h2, .footer h2{
+.sec2 h2, .org h2, .footer h2, .activi h2{
     font-size: 32px;
 }
 
@@ -180,7 +189,7 @@ hr {
     margin: 50px;
     display: flex;
     justify-content: space-evenly;
-    align-items: baseline;
+    align-items: center;
     gap: 50px;
     flex-wrap: wrap;
 }
@@ -239,6 +248,13 @@ hr {
     width: 50px;
 }
 
+@media (width <= 1150px) {
+.fecha,
+.localizacion,
+.acceso {
+    width: 100%;
+}
+}
 
 @media (width <= 750px) {
 .im{
@@ -260,4 +276,9 @@ hr {
 .colab {
     justify-content: center;
 }
+.barra {
+    align-items: center;
 }
+}
+
+
