--- a/12.EventoCultural/css/style.css
+++ b/12.EventoCultural/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Molengo&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -12,23 +13,28 @@
     --Color-titulo: #003366;
     --Texto-Principal: #fff;
     --Texto-Secundario: #000;
-    --Texto-titulo: font-family: "Open Sans", sans-serif;
-    --Texto-parrafo: font-family: "Molengo", sans-serif;
+    --Texto-titulo: "Open Sans", sans-serif;
+    --Texto-parrafo: "Molengo", sans-serif;
 }
 
 body {
     background-color: var(--Fondo-secundario);
 }
 
-/* footer {
-    background: var(--Fondo-encabe);
-} */
-
+h1 {
+    font-family: var(--Texto-titulo);
+}
 h2 {
     font-family: var(--Texto-titulo);
     color: var(--Color-titulo);
     text-align: center;
     padding: 30px 0;
+}
+button {
+    font-family: var(--Texto-titulo);
+}
+p {
+    font-family: var(--Texto-parrafo);
 }
 
 a {
@@ -220,6 +226,7 @@ hr {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 30px;
 }
 
 .footer p {
@@ -254,6 +261,9 @@ hr {
 .acceso {
     width: 100%;
 }
+.sec1 {
+    gap: 60px;
+}
 }
 
 @media (width <= 750px) {
@@ -275,6 +285,7 @@ hr {
 }
 .colab {
     justify-content: center;
+    gap: 60px;
 }
 .barra {
     align-items: center;
