--- a/20.ConversorDivisas/css/style.css
+++ b/20.ConversorDivisas/css/style.css
@@ -22,6 +22,7 @@
     margin: 0 auto;
     padding: 30px 0;
     background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+    min-height: 100vh;
 }
 
 /* +++++++++++++  HEADER  +++++++++++ */
